--- a/src/by/it/psmishenko/jd02_5/message_ru_RU.properties
+++ b/src/by/it/psmishenko/jd02_5/message_ru_RU.properties
@@ -1,3 +1,4 @@
-Main.welcome = \u041f\u0440\u0438\u0432\u0435\u0442!
-Main.HowDoYouDo = \u041a\u0430\u043a \u0442\u0432\u043e\u0438 \u0434\u0435\u043b\u0430?
-Main.MyName = \u041f\u0430\u0432\u0435\u043b
+Main.welcome = \u041F\u0440\u0438\u0432\u0435\u0442!
+Main.HowDoYouDo = \u041A\u0430\u043A \u0442\u0432\u043E\u0438 \u0434\u0435\u043B\u0430?
+Main.MyName = \u041F\u0430\u0432\u0435\u043B
+Main.Enter=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u044F\u0437\u044B\u043A:
